<resources>
    <string-array name="app_versions">
        <item>1.0</item>
        <item>1.1</item>
        <item>1.1.1</item>
        <item>1.2</item>
        <item>2.0</item>
        <item>3.0</item>
        <item>4.0</item>
        <item>4.0.1</item>
        <item>4.1</item>
        <item>5.0</item>
        <item>5.1</item>
        <item>6.0</item>
        <item>7.0</item>
    </string-array>
    <string-array name="app_changes">
        <item>• Initial release</item>
        <item>• Fixed some text from old version that made no sense</item>
        <item>• New App Icon</item>
        <item>• Updated support library\n• Added support for Android N settings link\n• Reduced APK size</item>
        <item>• Remade app with new layouts\n• Added banner ads to app (donations will disable ads)</item>
        <item>• Updated to newest libraries and rewrote app in kotlin</item>
        <item>• Updated app to Android P\n• App has new material design\n• Asks for ads consent</item>
        <item>• Bug Fixes</item>
        <item>• Added adaptive icons\n• Bug Fixes</item>
        <item>• Updated app with a visual refresh\n• New settings screen</item>
        <item>• Updated statistics\n• New app icon</item>
        <item>• Updated to Android Q\n• Support edge-to-edge\n• Added official Android dark theme\n• Bug fixes</item>
        <item>• Updated to Android 11</item>
    </string-array>

    <string name="app_name">DPI Checker</string>
    <string name="checkdpi">DPI</string>
    <string name="settings">Settings</string>
    <string name="dev_link">market://search?q=pub:Nick Nack Development</string>
    <string name="version_string">Version 4.0 (Tap for Changelog)</string>
    <string name="contact_dev">Contact Developer</string>
    <string name="support_dev">Support Developer</string>
    <string name="other_apps">Check out other Apps by Developer</string>
    <string name="gps_explanation">Google Play Services Version Explanation</string>
    <string name="gps_full_explanation">From APKMirror.com:\n\nTo figure out the right version of Google Play services for your Android device, go to Settings -> Apps -> Google Play services, and look at the last 3 numbers in the parentheses. You\'ll see something like -XYZ where:\n\nX defines Android version:\n\n0 for Android 5.0\n2 for Android 5.0 and 5.1 starting with Play Services v8\n4 for Android 5.0 and 5.1 before Play Services v8, Android >= 6.0 after\n7 for Android 5.0\n8 for Android TV\n\nY defines CPU architecture:\n\n1 for armeabi\n3 for armeabi-v7a\n4 for arm64-v8a\n7 for x86\n\nZ defines DPI:\n\n0 for universal\n2 for 160\n4 for 240\n6 for 320\n8 for 480</string>
    <string name="gps_recommendation"> If you want more information on Google Play Services and other dpi dependent applications, please visit the settings.</string>
    <string name="dpi_explanation">Device Statistics:\nDPI: %d\nResolution: %d x %d\n\nIf you have found use out of this app and want to support future development, please consider purchasing premium</string>
    <string name="dpiis">This devices DPI is </string>
    <string name="dummy_version">2.0</string>
    <string name="dummy_text">This is dummy text</string>
    <string name="dummy_title">Dummy Title</string>
    <string name="dummy_price">$1.00</string>
    <string name="dummy_description">Dummy description that should do something</string>
    <string name="action_purchase_premium">Purchase Premium</string>
    <string name="content_description">Content Description</string>
    <string name="action_licences">Open Source Licenses</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="action_contact_developer">Contact Developer</string>
    <string name="action_view_website">More info at my website</string>
    <string name="action_changelog">Changelog</string>
    <string name="action_share_app">Share the app :D</string>
    <string name="action_rate_app">Rate in play store</string>
    <string name="developer_play_store">Play Store</string>
    <string name="developer_name_full">Nick Nack Development</string>
    <string name="dev_web_link">https://nicknackdevelopment.com</string>
</resources>
