<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/settings_changelog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="getChangelog"
        android:padding="8dp"
        android:text="@string/version_string"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/settings_contact"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/settings_contact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="contactDev"
        android:padding="8dp"
        android:text="@string/contact_dev"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/settings_support"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_changelog" />

    <TextView
        android:id="@+id/settings_support"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="supportDev"
        android:padding="8dp"
        android:text="@string/action_purchase_premium"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/settings_other"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_contact" />

    <TextView
        android:id="@+id/settings_other"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="otherAppsDev"
        android:padding="8dp"
        android:text="@string/other_apps"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/settings_gps"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_support" />

    <TextView
        android:id="@+id/settings_gps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="gpsExplanation"
        android:padding="8dp"
        android:text="@string/gps_explanation"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_other" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-2142506713824375/4645692847"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>