<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nick.mowen.dpichecker.dpi.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutFullscreen="@{true}"
        app:paddingTopSystemWindowInsets="@{true}">

        <ImageView
            android:id="@+id/ratio"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/content_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_aspect_ratio_themed" />

        <TextView
            android:id="@+id/explanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/lorem" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/premium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="purchasePremium"
            android:text="@string/action_purchase_premium"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/explanation" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/frame"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/toolbar"
                style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:paddingBottomSystemWindowInsets="@{true}" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkDPI"
                android:text="@string/checkdpi"
                android:textColor="@android:color/white"
                app:fabSize="normal"
                app:icon="@drawable/ic_aspect_ratio_themed"
                app:iconTint="@android:color/white"
                app:layout_anchor="@+id/toolbar" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>